[project]
name = "resumable-stream"
version = "0.0.1"
description = "A Python port of vercel/resumable-stream"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sharath", email = "sharath@kortix.ai" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
keywords = ["redis", "stream", "resumable", "async", "vercel"]

[project.urls]
Homepage = "https://github.com/kortix/resumable-stream-python"
Repository = "https://github.com/kortix/resumable-stream-python.git"
Documentation = "https://github.com/kortix/resumable-stream-python#readme"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-timeout>=2.4.0",
  "redis>=6.2.0",
]
